# swiift

./: .flake8  .gitignore  E_FlexDispTest.py  FlexUtils_obj.py  GenExp.py  IceDef.py  MF1DSpecExp.py  MF1D_func_saving.py  MultipleFloes1D.py  MultipleFloes1DSpec.py  MultipleFloes1D_func.py  README.md  ReadMe.txt  ReadMeOar.txt  SensStudy.py  SensStudySaving.py  WaveDef.py  WaveSpecDef.py  config.py  gen_test_mono.py  gen_test_spec.py  pars.py  pyproject.toml  requirements.txt  treeForFrac.py
.github/workflows/: hatch_build.yml  lint_and_test.yml  python-package.yml
Libraries/: ElasticMaterials.py  dataSaving.py
gen_end_to_end/: __init__.py  floegen.py  wavegen.py
gen_end_to_end/floe/: att_A_18295c22fb360ab73849e0b4f00a38cc.csv  att_A_256129b7f2032357.csv  att_A_34f279ead613c9d7.npz  att_A_4704ee66f59239cf2a62361d956578b4.npz  att_A_763a3bb18cc52e50fd46d0cbe93d4836.npz  att_A_7dbb9670c0d6ef7100d627f416da2571.csv  att_A_9984b03f1f430002b7cb493d3f572fe7.npz  att_A_99eb858b00423f9e.csv  att_A_9fc75c60b23346e8beb4db7d482d46f8.npz  att_A_b843e52aed9d9acf1bb7766f3987e625.npz  att_A_ee15bcf3325bdeed.npz  att_A_f30e78eb2e1402c6.npz  att_xF_3d3d283017374bbc.csv  att_xF_5336e56b29b006bd.csv  att_xF_560d79b39d267483.csv  att_xF_63ab1faa52111704.csv  att_xF_8158c5f5c96e4ee94933d8767985899a.csv  att_xF_9a990fa3d5f892facbc23ed2ac72956e.csv  att_xF_ba0298f0426b3a8f.csv  att_xF_c2904a96facec9ec70a298f64affda3d.csv  att_xF_e8f462540fdc470a43427b1d0b4db453.csv  att_xF_eeedb6d8076140cc0f39dd2189fe89ae.csv  att_xF_fe482cc2bc7d511ac9cdf2c7edc2f33e.csv  att_xF_ff7d577ddb84fd382ae95edb3aeabf2e.csv  attributes_reference.parquet  met_calc_Eel_reference.parquet  met_calc_alpha_reference.parquet  met_calc_curv_reference.parquet  met_calc_du_reference.parquet  met_calc_strain_reference.parquet  met_calc_w_reference.parquet  met_fracture_reference.parquet  met_mslf_int_reference.parquet
gen_end_to_end/wave/: attributes_reference.parquet  met_amp_att_reference.parquet  met_amp_reference.parquet  met_calc_phase_reference.parquet  met_mslf_reference.parquet  met_waves_reference.parquet
src/flexfrac1d/: __about__.py  config.py  flexfrac1d.py  ice.py  pars.py  spectrum.py  wave.py
src/flexfrac1d/api/: api.py
src/flexfrac1d/lib/: _ph_utils.py  att.py  curvature.py  displacement.py  disprel.py  dr.py  energy.py  graphics.py  numerical.py  phase_shift.py  physics.py  utils.py
src/flexfrac1d/libraries/: FSDUtils.py  WaveChecks.py  WaveUtils.py  prog_rep.py
src/flexfrac1d/model/: frac_handlers.py  model.py
src/swiift/: __about__.py
src/swiift/api/: api.py
src/swiift/lib/: _ph_utils.py  att.py  constants.py  graphics.py  numerical.py  phase_shift.py  physics.py
src/swiift/model/: frac_handlers.py  model.py
tests/: conftest.py  helpers.py  model_strategies.py  physical_strategies.py  test_analytical_energy.py  test_attenuation.py  test_diagnosis.py  test_disp_relations.py  test_domain.py  test_e2e_unit_floe.py  test_e2e_unit_wave.py  test_experiment.py  test_fracture.py  test_fracture_handlers.py  test_graphics.py  test_model_objects.py  test_numerical.py  test_physical_handlers.py  test_physics.py  test_pscattering.py  test_spectrum.py  test_wave.py  utils.py
